# agent_init

./: CLAUDE.md  CLAUDE_CHAT_SKILL.md  LICENSE  README.md  install.sh  pyproject.toml
.claude/: mcp.example.jsonc  settings.example.json  settings.example.jsonc
.claude/agents/: eval-runner.md  pr-checklist.md  prompt-auditor.md  retrieval-reviewer.md
.claude/commands/: agent-stack-init.md  init.md  new-agent-project.md
.claude/hooks/: gate_git_push.sh
.claude/rules/: answer.md  frontend.md  retrieval.md  tests.md
.claude/skills/new-rag-eval/: SKILL.md
.claude/tools/: bootstrap_agent_config.py
.github/workflows/: claude-nightly-evals.example.yml
claude-chat-skill/agent-stack-init/: SKILL.md
docs/: agent-stack.md
skills/agent-stack-init/: SKILL.md
skills/agent-stack-init/agents/: openai.yaml
skills/agent-stack-init/references/: config-stack.md
skills/agent-stack-init/scripts/: bootstrap_agent_config.py  install_claude_commands.sh  install_codex_skill.sh
src/agent_stack_init/: __init__.py  bootstrap_agent_config.py  cli.py  mcp_server.py
